--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -11,7 +11,7 @@
 <body>
     <div id="body">
     <section id="area">
-        <form method="post" action="/baixar" id="form">
+        <form method="post" action="/select" id="form">
             <div id="logo">
                 <span id="title-logo">YouTube Downloader</span>
                 <img src="/img/youtube-logo.png" alt="" id="img-logo">
@@ -19,7 +19,7 @@
     
             <div id="link">
                 <input placeholder="Cole aqui o Link" type="url" name="link" id="link-input" required>
-                <button type="submit" id="button">Baixar</button>
+                <button type="submit" id="button">Selecionar</button>
             </div>
     
             <div>
